--- a/skills.html
+++ b/skills.html
@@ -33,7 +33,7 @@
       </tr>
       <tr>
         <td>Italian</td>
-        <td>Mothertongue</td>
+        <td>Native language</td>
       </tr>
     </table>
   </body>
